<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bottom_button"
        android:onClick="reset"
        android:textColor="@android:color/white"
        android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.courtcounter.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/team_a_name"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:textColor="#616161"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/team_a_score" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/below_score"
                android:layout_marginBottom="22dp"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:id="@+id/team_a_runs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/first_button"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:onClick="addOneForTeamA" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/second_button"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:onClick="addTwoForTeamA" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/third_button"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:onClick="addThreeForTeamA" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:onClick="addFourForTeamA" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:onClick="addSixForTeamA" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howzat_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"
                android:onClick="wicketTeamA" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/team_b_name"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:textColor="#616161"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/team_b_score" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/below_score"
                android:layout_marginBottom="22dp"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:id="@+id/team_b_runs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/first_button"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:onClick="addOneForTeamB" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/second_button"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:onClick="addTwoForTeamB" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/third_button"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"
                    android:onClick="addThreeForTeamB" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:onClick="addFourForTeamB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:onClick="addSixForTeamB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howzat_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_margin="4dp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"
                android:onClick="wicketTeamB" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>